fixed margins for larger displays, needs checking on smaller displays

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -306,6 +306,7 @@
     justify-self: flex-end;
     width: 100%;
     border: 1px solid red;
+    position: fixed;
   }
 
   .link{
